tests/neg/nopredef.scala
import Predef.{assert as _}

object Test {
  assert("asdf" == "asdf") // error: not found assert
}
